# DJ-Tools

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  README.md.bkp  config.json  conftest.py  development-requirements.txt  dj_tools.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploy-dev-docs.yaml  deploy-prod-docs.yaml  format-code.yaml  format.yaml  pylint.yaml  pytest-coverage.yaml  release-dev.yaml  release-prod.yaml  test-lint.yaml  test.yaml  version-bump.yaml
conceptual_guides/: index.html
conceptual_guides/file_standardization/: index.html
conceptual_guides/rekordbox_collection/: index.html
conceptual_guides/tagging_guide/: index.html
config/: config.py
css/: mkdocstrings.css
developer_docs/: index.html
developer_docs/collections_api/: index.html
developer_docs/new_collections/: index.html
developer_docs/playlist_filters/: index.html
developer_docs/system_overview/: index.html
djtools/: __init__.py  __main__.py  test_main.py  version.py
djtools/collection/: __init__.py  collections.py  config.py  copy_playlists.py  helpers.py  playlist_builder.py  playlist_filters.py  playlists.py  shuffle_playlists.py  tracks.py
djtools/collections/: __init__.py  collections.py  config.py  copy_playlists.py  helpers.py  playlist_builder.py  playlists.py  shuffle_playlists.py  tracks.py
djtools/configs/: cli_args.py  collection_playlists.yaml  config.py  config.yaml  helpers.py  logging.conf  registered_users.yaml  rekordbox_playlists.yaml  test_config.py  test_helpers.py
djtools/rekordbox/: __init__.py  config.py  copy_playlists.py  helpers.py  playlist_builder.py  playlist_combiner.py  shuffle_playlists.py  tag_parsers.py  test_config.py  test_copy_playlists.py  test_helpers.py  test_playlist_builder.py  test_randomize_playlists.py  test_shuffle_playlists.py  test_tag_parsers.py
djtools/spotify/: __init__.py  config.py  helpers.py  playlist_builder.py  test_config.py  test_helpers.py  test_playlist_builder.py
djtools/sync/: README.md  __init__.py  config.py  helpers.py  sync_operations.py  test_config.py  test_helpers.py  test_sync_operations.py
djtools/utils/: README.md  __init__.py  check_tracks.py  config.py  helpers.py  normalize_audio.py  process_recording.py  test_check_tracks.py  test_config.py  test_helpers.py  test_url_download.py  url_download.py
docs/: index.md  mkdocs.yml
docs/conceptual_guides/: file_standardization.md  index.md  rekordbox_collection.md  tagging_guide.md
docs/developer_docs/: collections_api.md  index.md  new_collections.md  playlist_filters.md  system_overview.md
docs/how_to_guides/: build_playlists.md  check_beatcloud.md  collection_playlists.md  combiner_playlists.md  copy_playlists.md  extract_from_url.md  index.md  process_recordings.md  reddit_spotify_api_access.md  setup_object_storage.md  shuffle_playlists.md  spotify_playlist_from_reddit.md  spotify_playlist_from_upload.md  standardize_audio.md  sync_beatcloud.md  sync_spotify.md
how_to_guides/: index.html
how_to_guides/check_beatcloud/: index.html
how_to_guides/collection_playlists/: index.html
how_to_guides/combiner_playlists/: index.html
how_to_guides/copy_playlists/: index.html
how_to_guides/extract_from_url/: index.html
how_to_guides/process_recordings/: index.html
how_to_guides/reddit_spotify_api_access/: index.html
how_to_guides/setup_object_storage/: index.html
how_to_guides/shuffle_playlists/: index.html
how_to_guides/spotify_playlist_from_reddit/: index.html
how_to_guides/spotify_playlist_from_upload/: index.html
how_to_guides/standardize_audio/: index.html
how_to_guides/sync_beatcloud/: index.html
how_to_guides/sync_spotify/: index.html
reference/collection/: index.html
reference/configs/: index.html
reference/spotify/: index.html
reference/sync/: index.html
reference/utils/: index.html
scripts/: README.md  clone_library.py  download.sh  find_lyrics.py  find_newest_tracks.py  get_genres.py  key_analysis.py  new_music_2021-18-22T13.05.31.txt  new_music_2021-30-22T12.05.49.txt  playlist_builder.py  playlist_builder.sh  playlist_data.json  randomize_tracks.py  rename.py  spotify_analysis.py  subreddit_playlist-ids.json
scripts/collection/: cluster_tracks.py  get_hot_cue_timings.py  get_tags_from_spotify.py  move_tags.py  remove_files_not_in_collection.py  remove_tags_from_comments.py  sort_tags.py  tracks_outside_playlists.py  update_collection.py  update_library_playlist.py  user_vibe_analysis.py
scripts/deprecated/: spotify_analysis.py
scripts/playlist_generation/: consolidate_dangling_tracks.py
scripts/repair/: move_music_new_structure.py  normalize_audio.py  rename_files.py  swap_title_artist.py
scripts/testing/: parse_pytest_output.py
scripts/xml/: copy_tracks.py  move_genre_tags.py  move_tags.py  remove_situation_tags_and_populate_album_year_label.py  tracks_outside_playlists.py  user_vibe_analysis.py
search/: search_index.json
src/djtools/: __init__.py  __main__.py  dj_tools.py  main.py  test_main.py  version.py
src/djtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/spotify/: __init__.py  playlist_builder.py  playlist_checker.py
src/sync/: __init__.py  helpers.py  sync_operations.py
src/test_data/: __init__.py  conftest.py  rekordbox.xml
src/utils/: README.md  __init__.py  config.py  generate_genre_playlists.py  get_genres.py  helpers.py  randomize_tracks.py  youtube_dl.py
test_data/: rekordbox.xml
testing/: test_main.py  test_version.py
testing/collection/: test_collections.py  test_config.py  test_copy_playlists.py  test_helpers.py  test_playlist_builder.py  test_playlist_filters.py  test_playlists.py  test_shuffle_playlists.py  test_tracks.py
testing/collections/: test_collections.py  test_config.py  test_copy_playlists.py  test_helpers.py  test_playlist_builder.py  test_playlists.py  test_shuffle_playlists.py  test_tracks.py
tests/: conftest.py  test_main.py  test_utils.py  test_version.py
(+172 files in other folders)
